# serializer version: 1
# name: test_sensor_entities[False][sensor.outdoor_smart_plug_wifi_signal_strength-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.outdoor_smart_plug_wifi_signal_strength',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'WiFi signal strength',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'WiFi signal strength',
    'platform': 'systemnexa2',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_signal_strength',
    'unique_id': 'aabbccddee02-wifi_dbm',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_sensor_entities[False][sensor.outdoor_smart_plug_wifi_signal_strength-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'Outdoor Smart Plug WiFi signal strength',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outdoor_smart_plug_wifi_signal_strength',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-50',
  })
# ---
# name: test_sensor_entities[False][sensor.outdoor_smart_plug_wifi_ssid-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.outdoor_smart_plug_wifi_ssid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'WiFi SSID',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'WiFi SSID',
    'platform': 'systemnexa2',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_ssid',
    'unique_id': 'aabbccddee02-wifi_ssid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[False][sensor.outdoor_smart_plug_wifi_ssid-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Outdoor Smart Plug WiFi SSID',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.outdoor_smart_plug_wifi_ssid',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Test WiFi SSID',
  })
# ---
